export default interface Temporada{
    getPorcentajeTarifa(): number;
}